# django-sns

./: pyproject.toml
boardapp/: admin.py  models.py  urls.py  views.py
boardapp/migrations/: 0001_initial.py  0002_auto_20201211_1527.py
boardproject/: settings.py  urls.py
templates/: base.html  create.html  detail.html  list.html  login.html  signup.html
